# coinapi-sdk

./: .gitignore  LICENSE  README.md  package-lock.json
chain-sdk/c/: CMakeLists.txt  README.md
chain-sdk/c/.openapi-generator/: FILES
chain-sdk/c/api/: AccountsAPI.c  AccountsAPI.h  AddLiquidityEventAPI.c  AddLiquidityEventAPI.h  AdminFeeChangeLogAPI.c  AdminFeeChangeLogAPI.h  AmplificationCoeffChangeLogAPI.c  AmplificationCoeffChangeLogAPI.h  BalancesAPI.c  BatchAPI.c  BatchAPI.h  BundlesAPI.c  BundlesAPI.h  BurnsAPI.c  BurnsAPI.h  CoinsAPI.c  CoinsAPI.h  ContractsAPI.c  ContractsAPI.h  ContractsVersionAPI.c  ContractsVersionAPI.h  CowAPI.c  CowAPI.h  CurveAPI.c  CurveAPI.h  DailyVolumeAPI.c  DailyVolumeAPI.h  DayDataAPI.c  DayDataAPI.h  DepositAPI.c  DepositAPI.h  DexAPI.c  DexAPI.h  FactoryAPI.c  FactoryAPI.h  FeeChangeLogAPI.c  FeeChangeLogAPI.h  GaugeAPI.c  GaugeAPI.h  GaugeDepositAPI.c  (+101 more)
chain-sdk/c/docs/: AccountsAPI.md  AddLiquidityEventAPI.md  AdminFeeChangeLogAPI.md  AmplificationCoeffChangeLogAPI.md  BatchAPI.md  BundlesAPI.md  BurnsAPI.md  CoinsAPI.md  ContractsAPI.md  ContractsVersionAPI.md  CowAPI.md  CurveAPI.md  DailyVolumeAPI.md  DayDataAPI.md  DepositAPI.md  DexAPI.md  FactoryAPI.md  FeeChangeLogAPI.md  GaugeAPI.md  GaugeDepositAPI.md  GaugeLiquidityAPI.md  GaugeTotalWeightAPI.md  GaugeTypeAPI.md  GaugeTypeWeightAPI.md  GaugeWeightAPI.md  GaugeWeightVoteAPI.md  GaugeWithdrawAPI.md  HourDataAPI.md  HourlyVolumeAPI.md  LiquidityPositionAPI.md  LiquidityPositionSnapshotsAPI.md  LpTokenAPI.md  MintAPI.md  MintsAPI.md  OrdersAPI.md  PoiAPI.md  PoolDayDataAPI.md  PoolHourDataAPI.md  PoolsAPI.md  PositionSnapshotAPI.md  (+188 more)
chain-sdk/c/model/: balance.c  balance.h  big_integer.c  big_integer.h  bundle_v3_dto.c  bundle_v3_dto.h  burn_v3_dto.c  burn_v3_dto.h  cow_order_dto.c  cow_order_dto.h  cow_settlement_dto.c  cow_settlement_dto.h  cow_token_dto.c  cow_token_dto.h  cow_trade_dto.c  cow_trade_dto.h  cow_user_dto.c  cow_user_dto.h  curve_account_dto.c  curve_account_dto.h  curve_add_liquidity_event_dto.c  curve_add_liquidity_event_dto.h  curve_admin_fee_change_log_dto.c  curve_admin_fee_change_log_dto.h  curve_amplification_coeff_change_log_dto.c  curve_amplification_coeff_change_log_dto.h  curve_coin_dto.c  curve_coin_dto.h  curve_contract_dto.c  curve_contract_dto.h  curve_contract_version_dto.c  curve_contract_version_dto.h  curve_daily_volume_dto.c  curve_daily_volume_dto.h  curve_exchange_dto.c  curve_exchange_dto.h  curve_fee_change_log_dto.c  curve_fee_change_log_dto.h  curve_gauge_deposit_dto.c  curve_gauge_deposit_dto.h  (+276 more)
chain-sdk/c/src/: apiClient.c
chain-sdk/c/unit-test/: test_big_integer.c  test_bundle_v3_dto.c  test_burn_v3_dto.c  test_cow_order_dto.c  test_cow_settlement_dto.c  test_cow_token_dto.c  test_cow_trade_dto.c  test_cow_user_dto.c  test_curve_account_dto.c  test_curve_add_liquidity_event_dto.c  test_curve_admin_fee_change_log_dto.c  test_curve_amplification_coeff_change_log_dto.c  test_curve_coin_dto.c  test_curve_contract_dto.c  test_curve_contract_version_dto.c  test_curve_daily_volume_dto.c  test_curve_exchange_dto.c  test_curve_fee_change_log_dto.c  test_curve_gauge_deposit_dto.c  test_curve_gauge_dto.c  test_curve_gauge_liquidity_dto.c  test_curve_gauge_total_weight_dto.c  test_curve_gauge_type_dto.c  test_curve_gauge_type_weight_dto.c  test_curve_gauge_weight_dto.c  test_curve_gauge_weight_vote_dto.c  test_curve_gauge_withdraw_dto.c  test_curve_hourly_volume_dto.c  test_curve_lp_token_dto.c  test_curve_pool_dto.c  test_curve_proposal_dto.c  test_curve_proposal_vote_dto.c  test_curve_remove_liquidity_event_dto.c  test_curve_remove_liquidity_one_event_dto.c  test_curve_system_state_dto.c  test_curve_token_dto.c  test_curve_transfer_ownership_event_dto.c  test_curve_underlying_coin_dto.c  test_curve_voting_app_dto.c  test_curve_weekly_volume_dto.c  (+116 more)
cpp-rest/: README.MD  coin_api.h  coin_api_test.cpp  makefile
csharp-fix/: MarketDataApp.cs  Program.cs  csharp_fix.sln
csharp-fix-v1/: COINAPI.FIX.V1.csproj  COINAPI.FIX.V1.sln  FIX44.xml  MarketDataApp.cs  Program.cs  config_ssl.cfg  csharp_fix.csproj
csharp-fix-v2/: MarketDataApp.cs  Program.cs  config_nossl.cfg  config_ssl.cfg  csharp_fix.csproj
csharp-flatfiles-example/: Program.cs  (+1 more)
csharp-rest/: CoinApi.cs  (+4 more)
haskell-rest/: CoinApi.hs  Main.hs  README.md  haskell-rest.cabal
haskell-rest/CoinApi/: Monadic.hs
haskell-rest/CoinApi/Types/: Asset.hs  Quote.hs  Rate.hs  Trade.hs  Tweet.hs
oeml-sdk/c/: CMakeLists.txt  README.md
oeml-sdk/c/.openapi-generator/: FILES
oeml-sdk/c/api/: BalancesAPI.c  BalancesAPI.h  OrdersAPI.c  OrdersAPI.h  PositionsAPI.c  PositionsAPI.h
oeml-sdk/c/docs/: BalancesAPI.md  OrdersAPI.md  PositionsAPI.md  balance_data.md  message.md  message_reject.md  ord_side.md  order_execution_report.md  order_execution_report_all_of.md  order_new_single_request.md  position_data.md  reject_reason.md  severity.md  time_in_force.md
oeml-sdk/c/model/: balance.c  balance.h  balance_data.c  balance_data.h  cancel_order.h  fills.h  message.c  message.h  message_reject.c  message_reject.h  messages_info.c  messages_ok.c  messages_ok.h  ord_side.c  ord_side.h  ord_status.c  ord_status.h  ord_type.c  ord_type.h  order.c  order.h  order_cancel_all_request.c  order_cancel_all_request.h  order_cancel_single_request.c  order_cancel_single_request.h  order_data.c  order_execution_report.c  order_execution_report.h  order_execution_report_all_of.c  order_execution_report_all_of.h  order_live.c  order_live.h  order_new_single_request.c  order_new_single_request.h  position.c  position.h  position_data.c  position_data.h  reject_reason.c  reject_reason.h  (+5 more)
oeml-sdk/c/src/: apiClient.c
oeml-sdk/c/unit-test/: test_balance.c  test_balance_data.c  test_cancel_order.c  test_message.c  test_message_reject.c  test_messages.c  test_ord_side.c  test_order_cancel_all_request.c  test_order_cancel_single_request.c  test_order_data.c  test_order_execution_report.c  test_order_execution_report_all_of.c  test_order_new_single_request.c  test_position.c  test_position_data.c  test_severity.c
(+27046 files in other folders)
