name:                haskell-rest
version:             1.0.0.0
synopsis:            SDK for CoinApi REST API
-- description:         
homepage:            https://github.com/Kotolegokot/
license:             MIT
license-file:        LICENSE
author:              Kotik Andreev
maintainer:          gkotolegokot@gmail.com
-- copyright:           
-- category:            
build-type:          Simple
extra-source-files:  ChangeLog.md
cabal-version:       >=1.10

library
  exposed-modules:     CoinApi, CoinApi.Monadic, CoinApi.Types.Asset, CoinApi.Types.Exchange, CoinApi.Types.OHLCV, CoinApi.Types.Orderbook,
                        CoinApi.Types.Period, CoinApi.Types.Quote, CoinApi.Types.Rate, CoinApi.Types.Symbol, CoinApi.Types.Trade, CoinApi.Types.Tweet
  -- other-modules:       
  -- other-extensions:    
  build-depends:       base >=4.9 && <4.10, http-conduit >= 2.2, http-types >= 0.9, aeson >= 1.1, bytestring >= 0.10, case-insensitive >= 1.2, text >= 1.2, time >= 1.6, scientific >= 0.3, vector >= 0.11, mtl >= 2.2
  -- hs-source-dirs:      
  default-language:    Haskell2010

executable examples
  main-is:              Main.hs
  build-depends:        base >=4.9 && <4.10, http-conduit >= 2.2, http-types >= 0.9, aeson >= 1.1, bytestring >= 0.10, case-insensitive >= 1.2, text >= 1.2, time >= 1.6, scientific >= 0.3, vector >= 0.11, mtl >= 2.2, haskell-rest >= 1
  default-language:     Haskell2010
